--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<center>
-		<a><img src="img/01.jpg" alt="Wilton" width="100" height="133"><p><h3>WILTON DA SILVA SANTOS</h3></p></a>
+		<a><img src="01.jpg" alt="Wilton" width="100" height="133"><p><h3>WILTON DA SILVA SANTOS</h3></p></a>
 		<a>
 			<p><h3>Sobre Mim:</h3></p>
 
